# articulation_simulation_setup

./: CMakeLists.txt  package.xml  readme.md
launch/: .setup.swp
setup_repos/: grabscript.sh  repo_urls.txt  setupscript.sh
